# tesla

./: .gitattributes  .gitignore  README.md
Hachi/app/: .gitignore  CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
Hachi/app/libs/: rangebar-release.aar  rangeseekbar-release.aar
Hachi/app/src/main/: AndroidManifest.xml
Hachi/app/src/main/assets/: api.html  skins.xml
Hachi/app/src/main/assets/Assets_theme3/: skin_theme3.json
Hachi/app/src/main/assets/about/: license.htm  privacy.htm  terms.htm
Hachi/app/src/main/assets/guide/: index.html
Hachi/app/src/main/assets/js/: api.js
Hachi/app/src/main/assets/license/: license.htm
Hachi/app/src/main/assets/privacy/: privacy.html
Hachi/app/src/main/assets/skin_default/: skin_default.json  skin_default.xml
Hachi/app/src/main/assets/terms/: terms.html
Hachi/app/src/main/cpp/include/: avf_error_code.h  avf_std_media.h  avrpro_std_data.h  com_waylens_hachi_snipe_remix_AvrproFilter.h  vdb_cmd.h  vdb_local.h
Hachi/app/src/main/jni/: com_waylens_hachi_ui_services_download_HttpRemuxer.c  com_waylens_hachi_ui_services_download_HttpRemuxer.cpp  com_waylens_hachi_ui_services_download_HttpRemuxer.h  dummy.cpp  dummy.h
Hachi/app/src/main/res/anim/: activity_close.xml  in_from_left.xml  in_from_right.xml  keep.xml  out_to_left.xml  slide_in_up.xml  slide_out_down.xml  slide_out_likes_counter.xml
Hachi/app/src/main/res/animator/: comment_selection.xml  heart_break_draw_stroke.xml  heart_break_fade_out.xml  heart_break_left_rotate.xml  heart_break_right_rotate.xml  minus_to_plus.xml  plus_to_minus.xml
Hachi/app/src/main/res/animator-v21/: comment_selection.xml  minus_to_plus.xml
Hachi/app/src/main/res/color/: app_primary_text.xml  dialog_btn_text_color.xml  hachi_button.xml
Hachi/app/src/main/res/drawable/: action_button_default_bg.xml  asl_heart.xml  avd_back_to_search.xml  avd_heart_empty.xml  avd_heart_fill.xml  avd_search_to_back.xml  background_drawable.xml  background_filter.xml  bookmark_tab.xml  btn_cancel_remix.xml  btn_check.xml  btn_close_bg.xml  btn_dialog.xml  btn_edit_action_crop.xml  btn_edit_action_save.xml  btn_edit_action_video.xml  btn_enhance_addbookmark.xml  btn_enhance_addvideo.xml  btn_enhance_gauge.xml  btn_enhance_gauge_disabled.xml  btn_enhance_music.xml  btn_enhance_music_disabled.xml  btn_enhance_remix.xml  btn_map.xml  (+159 more)
Hachi/app/src/main/res/drawable-anydpi/: ic_account_circle.xml  ic_account_circle_placeholder.xml  ic_arrow_drop_down.xml  ic_arrow_drop_up.xml  ic_brightness_medium.xml  ic_btn_gauge_overlay_n.xml  ic_btn_gauge_overlay_s.xml  ic_cloud_upload_black_24dp.xml  ic_delete.xml  ic_directions_car.xml  ic_edit.xml  ic_enhance.xml  ic_favorite.xml  ic_favorite_border.xml  ic_group.xml  ic_more.xml  ic_movie_filter.xml  ic_people_outline.xml  ic_place.xml  ic_reply.xml  ic_report.xml  ic_report_problem.xml  ic_schedule.xml  ic_settings_about.xml  ic_signal_wifi_1_bar.xml  ic_signal_wifi_1_bar_lock.xml  ic_signal_wifi_2_bar.xml  ic_signal_wifi_2_bar_lock.xml  ic_signal_wifi_3_bar.xml  ic_signal_wifi_3_bar_lock.xml  ic_signal_wifi_4_bar.xml  ic_signal_wifi_4_bar_lock.xml  ic_take_car_picture.xml  ic_video.xml  ic_virtual_racing.xml  ic_volume_up.xml  ic_wheel.xml  ic_youtube_enable.xml  social_comment.xml  social_like.xml  (+1 more)
Hachi/app/src/main/res/drawable-nodpi/: bb_bottom_bar_top_shadow.xml
Hachi/app/src/main/res/drawable-v21/: action_button_default_bg.xml  btn_default_bg.xml  btn_send_comment.xml  default_bg.xml  fab_label_background.xml  ic_follow_24dp.xml  ic_unfollow_24dp.xml  laptimer_bg.xml  list_item_bg.xml
Hachi/app/src/main/res/drawable-xhdpi/: album_list_item_bg_selector.xml
(+1979 files in other folders)
